--- a/no_recursive_doc_agents_eval.ipynb
+++ b/no_recursive_doc_agents_eval.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyNC2eNYFEzaQvAuzdN/y4Ga",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/wenqiglantz/devsecops-end-to-end-eval/blob/main/no_recursive_doc_agents_eval.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -585,7 +597,7 @@
     {
       "cell_type": "code",
       "source": [
-        "response = query_engine.query('What is the topic of the document?')\n",
+        "response = query_engine.query('What is the purpose of uploading the report to an artifact?')\n",
         "print(str(response))\n",
         "print(\"-----------------\")\n",
         "print(response.get_formatted_sources(length=1000))"
@@ -595,19 +607,40 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AURMR784mGyH",
-        "outputId": "b8a5fc05-458b-4965-9556-d31ca809f981"
+        "outputId": "7de9ef33-61a8-4545-e669-a691070c7ebd"
       },
-      "execution_count": 105,
+      "execution_count": 120,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "The topic of the document is \"DevOps Self-Service Centric Terraform Project Structure\".\n",
+            "The purpose of uploading the report to an artifact is not mentioned in the given context information.\n",
             "-----------------\n",
-            "> Source (Doc id: 56053b40-728f-4f95-a1a6-d13cc764a0ee): image by author\n",
+            "> Source (Doc id: 69b3f575-c3c2-4b70-993e-cbcf72fa1b31): DevOps Self -Service Pipeline Architecture and Its 3 –2–1 Rule  \n",
+            "A high -level architectural overview of the self -service pipeline  \n",
+            " \n",
+            "DevOps Self -Service Calls for Drastic Mindset Change  \n",
+            "Whether you call it DevOps self -service, democratizing DevOps, or Platform Engineering, \n",
+            "the goal is the same — to empower developers with more access, control, and ownership \n",
+            "over the pipelines to boost productivity.  \n",
+            "Let’s call it “DevOps self -service” in t his article to be consistent in our terms.\n",
             "\n",
-            "> Source (Doc id: b13abc3b-9fd7-4670-9320-572d47f211bd): image by author\n"
+            "> Source (Doc id: e74193a1-280c-4977-b625-e2f79a15b38c): • How do we tie infrastructure pipelines with application pipelines to make \n",
+            "them work together seamlessly? We need a glue to integrate these two \n",
+            "types of pipelines. And this glue is GitHu b secrets creation automation. \n",
+            "Upon successful infrastructure provisioning, we can use Terraform to \n",
+            "automate GitHub secrets creation by calling the GitHub provider. Notice \n",
+            "the double -ended arrows for the infrastructure pipeline in the diagram \n",
+            "above, as the  Terraform outputs for the secrets get inserted into GitHub \n",
+            "automatically. This eliminates manual secrets creation and enables \n",
+            "application pipelines to kick off CI/CD for the specified GitHub \n",
+            "environment with the secrets associated with that particular Git Hub \n",
+            "environment provided by Terraform through the infrastructure pipeline. \n",
+            "This accomplishes the end -to-end, state -of-the-art integration of these two \n",
+            "types of pipelines.  \n",
+            "High -Level Design of DevOps Pipelines  \n",
+            "We will dive deeper into the project structures  for Terraform, it...\n"
           ]
         }
       ]
@@ -739,7 +772,7 @@
     {
       "cell_type": "code",
       "source": [
-        "response = query_engine.query('What is the topic of the second part in the series?')\n",
+        "response = query_engine.query('What is the intended audience for these documents?')\n",
         "print(str(response))\n",
         "print(\"-----------------\")\n",
         "print(response.get_formatted_sources(length=256))"
@@ -749,29 +782,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "P1TTjrGPyOtE",
-        "outputId": "54368f5c-c9e0-4db3-da3f-e5a9aa26064b"
+        "outputId": "44feb785-06a2-4fc7-ace3-53c130f33f4b"
       },
-      "execution_count": 116,
+      "execution_count": 119,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "The topic of the second part in the series is \"DevOps Self-Service Centric Pipeline Security and Guardrails.\"\n",
+            "The intended audience for these documents is not specified in the given context information.\n",
             "-----------------\n",
-            "> Source (Doc id: 6d5a6daf-46ce-4035-be17-e7421a77f581): DevOps Self -Service Centric GitHub Actions’ Workflow Orchestration  \n",
-            "How to orchestrate GitHub Actions’ workflows that a re driven by image immutability  \n",
-            "betterprogramming.pub  \n",
-            " \n",
-            " \n",
-            "DevOps Self -Service Centric Pipeline Security and Guardrails  \n",
-            "A lis...\n",
+            "> Source (Doc id: 56053b40-728f-4f95-a1a6-d13cc764a0ee): image by author\n",
             "\n",
-            "> Source (Doc id: 892a4b0f-1894-473d-9801-8ecc13db644d): popularity of the Terraform tool and IaC practices to automate deployments in the cloud \n",
-            "increasingly.  \n",
-            " \n",
-            "Image source:  The top programming languages | The State of the Octoverse \n",
-            "(github.com)\n"
+            "> Source (Doc id: b13abc3b-9fd7-4670-9320-572d47f211bd): image by author\n"
           ]
         }
       ]
