--- a/recursive_doc_agents_eval.ipynb
+++ b/recursive_doc_agents_eval.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyM024iGgnmk6xWB1UQO1Rpx",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/wenqiglantz/devsecops-end-to-end-eval/blob/main/recursive_doc_agents_eval.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -56,7 +68,7 @@
         "id": "7EeHhmD5wFB7",
         "outputId": "dcc81f11-7c76-4d03-bb17-1f42ef3690af"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -111,7 +123,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "EWFRhJpBvZQc"
       },
@@ -153,7 +165,7 @@
       "metadata": {
         "id": "NhCJLikmvja4"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -169,7 +181,7 @@
         "id": "2EH3a35lzgsP",
         "outputId": "f68a208a-fcc8-48b6-cddf-e4ce11b56ed6"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -210,7 +222,7 @@
         "id": "JHsubrwxvsUB",
         "outputId": "6fc90a58-984f-4589-91ab-7bc9a60d5c28"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -279,7 +291,7 @@
       "metadata": {
         "id": "48wW2HE0vzjS"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -330,7 +342,7 @@
       "metadata": {
         "id": "QeLU8cDkv2XR"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -409,7 +421,7 @@
         },
         "outputId": "70f97138-13b5-4160-a595-4e12cc0c46c3"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -443,7 +455,7 @@
         "id": "arZvdpdNhnyx",
         "outputId": "39a3cc1d-6599-485c-ff58-0c7f55c60875"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -509,7 +521,7 @@
       "metadata": {
         "id": "7uNjIUK3v7Hj"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -539,7 +551,7 @@
         "id": "2A2gMhZOEhij",
         "outputId": "5f19bf9b-ac23-4c83-8522-66488e69a4ba"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -631,7 +643,7 @@
       "metadata": {
         "id": "OmV5PGb4h352"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -648,7 +660,7 @@
         },
         "outputId": "d41fb1a2-4e6d-436c-edc4-6dacbb8528ba"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -689,7 +701,7 @@
         "id": "cgj9cyq0E4eg",
         "outputId": "36e7546e-8d27-4b0e-eed7-5b8df60a27c9"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -761,7 +773,7 @@
       "metadata": {
         "id": "D6b7B7M068pa"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -780,7 +792,7 @@
         "id": "ZMA1SA-wikT-",
         "outputId": "0c816b63-239c-4268-b3b8-ac77b196755a"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -835,31 +847,16 @@
     {
       "cell_type": "code",
       "source": [
-        "response = query_engine.query('What is the topic of the second part in the series?')\n",
+        "response = query_engine.query('')\n",
         "print(str(response))\n",
         "print(\"-----------------\")\n",
         "print(response.get_formatted_sources(length=256))"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "B5sj-6VEFNDF",
-        "outputId": "d7b26877-9016-4919-e4c3-1a4e2261837a"
+        "id": "HccP7C6ZpWDd"
       },
-      "execution_count": 44,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "The topic of the second part in the series is \"DevOps Self-Service Pipeline Architecture and Its 3-2-1 Rule\".\n",
-            "-----------------\n",
-            "> Source (Doc id: 509a158b-728b-4266-b1d6-2454b2b088dc): Query: What is the topic of the second part in the series?\n",
-            "Response: The topic of the second part in the series is \"DevOps Self-Service Pipeline Architecture and Its 3-2-1 Rule\".\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
