--- a/recursive_doc_agents_eval.ipynb
+++ b/recursive_doc_agents_eval.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP4V4rJ+E0znuMc2w+N9yJp",
+      "authorship_tag": "ABX9TyMSmPIe4gN71qXdlqE9ddrE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -391,8 +391,10 @@
         "random.seed(42)\n",
         "from llama_index.prompts import Prompt\n",
         "\n",
+        "# load data\n",
         "document_list = SimpleDirectoryReader(\"data\").load_data()\n",
         "\n",
+        "# use gpt-4 to evaluate\n",
         "gpt4_service_context = ServiceContext.from_defaults(llm=OpenAI(temperature=0.1, llm=\"gpt-4\"))\n",
         "\n",
         "question_dataset = []\n",
@@ -418,19 +420,17 @@
         "            \"context information provided.\\n\"\n",
         "            \"Question: \"\n",
         "        ),\n",
-        "        # set this to be low, so we can generate more questions\n",
         "        service_context=gpt4_service_context\n",
         "    )\n",
         "    generated_questions = data_generator.generate_questions_from_nodes()\n",
         "    print(f\"Generated {len(generated_questions)} questions.\")\n",
         "\n",
-        "    # randomly pick 30 questions from each dataset\n",
+        "    # randomly pick 30 questions\n",
         "    generated_questions = random.sample(generated_questions, 30)\n",
         "    question_dataset.extend(generated_questions)\n",
-        "\n",
         "    print(f\"Randomly picked {len(question_dataset)} questions.\")\n",
         "\n",
-        "    # save the questions!\n",
+        "    # save the questions into a txt file\n",
         "    with open(\"question_dataset.txt\", \"w\") as f:\n",
         "        for question in question_dataset:\n",
         "            f.write(f\"{question.strip()}\\n\")"
@@ -544,10 +544,12 @@
     {
       "cell_type": "code",
       "source": [
+        "# call ResponseEvaluator to evaluate the responses\n",
         "evaluator = ResponseEvaluator(service_context=gpt4_service_context)\n",
         "response_vector = query_engine.query(question_dataset[0])\n",
         "eval_result = evaluator.evaluate(response_vector)\n",
         "\n",
+        "# display the eval data frame\n",
         "pd.set_option(\"display.max_colwidth\", 0)\n",
         "display_eval_df(question_dataset[0], response_vector, eval_result)"
       ],
@@ -638,11 +640,13 @@
         "        responses = asyncio.run(asyncio.gather(*tasks))\n",
         "        print(f\"finished batch {(batch_size // 5) + 1} out of {len(questions) // 5}\")\n",
         "\n",
+        "        # eval for hallucination\n",
         "        if isinstance(evaluator, ResponseEvaluator):\n",
         "          for response in responses:\n",
         "              eval_result = 1 if \"YES\" in evaluator.evaluate(response) else 0\n",
         "              total_correct += eval_result\n",
         "              all_results.append(eval_result)\n",
+        "        # eval for answer quality\n",
         "        elif isinstance(evaluator, QueryResponseEvaluator):\n",
         "          for question, response in zip(batch_qs, responses):\n",
         "              eval_result = 1 if \"YES\" in evaluator.evaluate(question, response) else 0\n",
@@ -663,8 +667,8 @@
     {
       "cell_type": "code",
       "source": [
+        "# eval for hallucination\n",
         "total_correct, all_results = evaluate_query_engine(evaluator, query_engine, question_dataset)\n",
-        "\n",
         "print(f\"Hallucination? Scored {total_correct} out of {len(question_dataset)} questions correctly.\")"
       ],
       "metadata": {
